[package]
name = "async-minecraft-ping"
version = "0.2.5"
authors = ["Jay Vana <jaysvana@gmail.com>", "LordMZTE <lord@mzte.de>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "An async Rust client for the Minecraft ServerListPing protocol"
readme = "README.md"
repository = "https://github.com/jsvana/async-minecraft-ping/"
keywords = ["minecraft", "mc", "serverlistping"]
categories = ["asynchronous", "api-bindings"]

[dependencies]
anyhow = "1.0.40"
async-trait = "0.1.50"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
thiserror = "1.0.24"
tokio = { version = "1.5.0", features = ["net", "io-util"] }

[dev-dependencies]
anyhow = "1.0.40"
structopt = "0.3.21"
tokio = { version = "1.5.0", features = ["macros"] }
